[package]

name = "iterslide"
version = "0.0.5"
authors = ["Noemi Lapresta <noemi.lapresta@gmail.com>"]
readme = "README.md"
keywords = ["iterator", "iter", "slide", "sliding", "window"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/purpliminal/rust-iterslide"
repository = "https://github.com/purpliminal/rust-iterslide"
description = "A \"sliding window\" iterator."
