[package]

name = "iterslide"
version = "1.0.0"
authors = ["Noemi Lapresta <noemi.lapresta@gmail.com>"]
readme = "README.md"
keywords = ["iterator", "iter", "slide", "sliding", "window"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/purpliminal/rust-iterslide"
repository = "https://github.com/purpliminal/rust-iterslide"
description = "A \"sliding window\" iterator."
