[package]

name = "iterslide"
version = "1.0.1"
authors = ["Noemi Lapresta <noemi.lapresta@gmail.com>", "Michael Rosenberg <micro@fastmail.com>"]
readme = "README.md"
keywords = ["iterator", "iter", "slide", "sliding", "window"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/rozbb/rust-iterslide"
repository = "https://github.com/rozbb/rust-iterslide"
description = "A \"sliding window\" iterator."
